plugin/tests/snapshots/render_snapshots__flow_branch_picker.snap
---
source: tests/render_snapshots.rs
expression: picker
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m

  [1mSelect a branch:[0m

[36m▌[0m main
  feat-a[2m (open)[0m
  feat-b[2m (open)[0m
  dev










  [2m↑/↓[0m move  type to filter  [2mEnter[0m create  [2mEsc[0m back
  [2mVERSION                                                             [0m
