plugin/tests/snapshots/render_snapshots__flow_branch_picker_after_down.snap
---
source: tests/render_snapshots.rs
expression: picker_moved
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m

  [1mSelect a branch:[0m

  main
[36m▌[0m feat-a[2m (open)[0m
  feat-b[2m (open)[0m
  dev










  [2m↑/↓[0m move  type to filter  [2mEnter[0m create  [2mEsc[0m back
  [2mVERSION                                                             [0m
