plugin/tests/snapshots/render_snapshots__flow_branch_picker_after_filter.snap
---
source: tests/render_snapshots.rs
expression: picker_filtered
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m

  [1mSelect a branch:[0m d[7m [0m

[36m▌[0m dev













  [2m↑/↓[0m move  type to filter  [2mEnter[0m create  [2mEsc[0m back
  [2mVERSION                                                             [0m
