plugin/tests/snapshots/render_snapshots__flow_branch_picker_after_j.snap
---
source: tests/render_snapshots.rs
expression: picker_moved
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m

  [1mSelect a branch:[0m

   main [0m
  [7m feat-a [0m
   feat-b [0m
   dev [0m










  [2m↑/k[0m up  [2m↓/j[0m down  [2mEnter[0m create  [2mEsc[0m back
  [2mVERSION                                                             [0m
