plugin/tests/snapshots/render_snapshots__flow_input_typed.snap
---
source: tests/render_snapshots.rs
expression: typed
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m

  [1mNew branch name:[0m

  > fix[7m [0m













  [2mEnter[0m create  [2mEsc[0m back
  [2mVERSION                                                             [0m
